maze.lessons.maze.wallfollower.WallFollowerMaze.scala.error
Escaper:27: error: not found: value estfaceMur
  var d = estfaceMur()
          ^